# chronoviz

./: .gitignore  AGENTS.md  README.md  STEPS.md  main.py  pyproject.toml
chronoviz/: __init__.py  alignment.py  cli.py  combine.py  plotting.py  utils.py
chronoviz/backends/: __init__.py  mpl.py
chronoviz/writers/: __init__.py  ffmpeg.py
notebooks/: prototype.ipynb  prototype.py  prototype_fix.py
src/: __init__.py  alignment.py  cli.py  combine.py  plotting.py  utils.py
src/backends/: mpl.py
src/writers/: __init__.py  ffmpeg.py
test/: README.md  benchmark_config.py  benchmark_runner.py  generate_samples.py  performance_profiler.py  test_data_generators.py  test_synthetic_benchmarks.py
