[project]
name = "chronoviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "fastplotlib>=0.5.1",
    "glfw>=2.9.0",
    "matplotlib>=3.10.5",
    "numba>=0.61.2",
    "pandas>=2.3.1",
    "pygfx>=0.12.0",
    "rendercanvas>=2.2.0",
    "tables>=3.10.2",
    "turbojpeg>=0.0.2",
    "wgpu>=0.22.2",
]

[project.scripts]
chronoviz = "src.cli:cli_main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
hdf5 = [
    "tables>=3.10.2",
]
jupyter = [
    "ipykernel>=6.30.1",
    "jupyter-rfb>=0.5.3",
    "jupytext>=1.17.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
