[project]
name = "chronoviz"
version = "0.0.1"
description = "Generate synchronized time-series plot videos and combine them with base video."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "av>=10.0.0",
    "matplotlib>=3.7",
    "numba>=0.61",
    "numpy>=1.23",
    "pandas>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.scripts]
chronoviz = "chronoviz.cli:cli_main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronoviz"]

[tool.hatch.build.targets.sdist]
include = ["chronoviz", "README.md", "AGENTS.md", "STEPS.md"]

[project.optional-dependencies]
hdf5 = [
    "tables>=3.10.2; python_version >= '3.11'",
    "tables>=3.9,<3.10.2; python_version < '3.11'",
    "h5py>=3.7",
]
jupyter = [
    "ipykernel>=6.30.1",
    "jupyter-rfb>=0.5.3",
    "jupytext>=1.17.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[project.urls]
Homepage = "https://github.com/tom21100227/chronoviz"
Repository = "https://github.com/tom21100227/chronoviz"
Issues = "https://github.com/tom21100227/chronoviz/issues"

[tool.ruff]
exclude = [
  "notebooks",
]

[tool.ruff.lint]
ignore = [
  "F841", # local variable assigned but never used
]
